--- a/documentation/src/Fazit.tex
+++ b/documentation/src/Fazit.tex
@@ -3,14 +3,12 @@
 
 \chapter{Fazit}\label{ch:fazit}
 Die urspr{"u}nglichen Anforderungen wurden umgesetzt.
-Im Laufe der Zeit hatte ich noch zus{"a}tzliche Ideen, die noch nicht alle Umgesetzt sind.
-Was genau umgesetzt oder verworfen wurde ist den UserStories in Abschnitt~\ref{subsec:user-storys} zu entnehmen.
-F{"u}r mich pers{"o}nlich war das Hauptziel neue Sachen zu lernen und etwas zu Experimentieren.
-Das ist mir auch gelungen.
-Ob mein Projekt gro{\ss}e Verwendung f{"u}r andere hat bleibt wie schon in der Einleitung erw{"a}hnt abzuwarten.
+Im Laufe der Zeit hatte ich noch zus{"a}tzliche Ideen, die noch nicht alle umgesetzt sind.
+Was genau erledigt oder verworfen wurde ist den UserStories in Abschnitt~\ref{subsec:user-storys} zu entnehmen.
+Ob mein Projekt gro{\ss}e Verwendung f{"u}r andere hat, bleibt wie schon in der Einleitung erw{"a}hnt, abzuwarten.
 Momentan erm{"o}glicht die Anwendung eine Abgeschw{"a}chte form des DynDns.
-Anstelle von eines Domainnamen wird der Server nach der IP-Adresse zu einem Device Namen gefragt.
-DynDns ist nat{"u}rlich besser, kostet aber evtl. etwas.
-M{"o}chte man nur etwas ausprobieren oder hat eine Anwendung ohne Domainnamen k{"o}nnte IP-Share aber durchaus sinnvoll sein.
-Eine Praktische erweiterung f{"u}r Websites w{"a}re hier eine automatische Umleitung von z.B. \url{ipshare.de/redirect/MeineAnwendung} zu \url{oeffentlicheip:5000/}.
-Eine weitere Idee, die ich h{"a}tte, ist ein ``reverse Proxy`'' mit dem ohne Port-Forwarding Kontakt zum Server aufgebaut werden k{"o}nnte.
+Anstelle eines Domainnamens wird der Server nach der IP-Adresse zu einem Device Namen gefragt.
+DynDns ist nat{"u}rlich ausgereifter, kostet aber evtl. etwas.
+M{"o}chte man nur etwas ausprobieren oder hat eine Anwendung ohne Domainnamen ,k{"o}nnte IPShare aber durchaus sinnvoll sein.
+Eine praktische Erweiterung f{"u}r Websites, w{"a}re hier eine automatische Umleitung von z.B. \url{ipshare.de/redirect/MeineAnwendung} zu \url{oeffentlicheip:5000/}.
+Eine weitere Idee, die ich h{"a}tte, ist ein ``reverse Proxy`'', mit dem ohne Port-Forwarding Kontakt zum Server aufgebaut werden k{"o}nnte.
