--- a/documentation/src/Motivation.tex
+++ b/documentation/src/Motivation.tex
@@ -2,47 +2,46 @@
 %! Date = 26.01.2024
 
 \chapter{Motivation und Anforderungen}\label{ch:motivation-und-anforderungen}
-Musstest du schon einmal die Ip-Adresse von einem anderen Ger{"a}t per Hand abtippen?
+Musstest du schon einmal die IP-Adresse von einem anderen Ger{"a}t per Hand abtippen?
 Wahrscheinlich nicht und wenn hat es bestimmt auch nicht weh getan.
-Aber w{"a}hre es nicht viel besser stattdessen an beiden Ger{"a}ten den Browser zu {"o}ffen und auf eine Webseite zu gehen,
-welche die Ip-Adresse von einem Ger{"a}t zum anderen {"u}bertr{"a}gt.
+Aber w{"a}re es nicht viel besser stattdessen an beiden Ger{"a}ten den Browser zu {"o}ffen und auf eine Webseite zu gehen,
+welche die IP-Adresse von einem Ger{"a}t zum anderen {"u}bertr{"a}gt.
 ``Nein, es dauert genauso lang'' h{"o}re ich dich sagen.
 Wahrscheinlich hast du recht.
 Na ja, ich habe trotzdem einige Monate an einer Webseite entwickelt, die im Prinzip das macht.
 Frei nach dem Motto automatisiere 3 Monate, eine Aufgabe die 3 Sekunden dauert.
-Bei IpShare handelt es sich also im Prinzip um ein overengineertes Clipboard.
+Bei IPShare handelt es sich also im Prinzip um ein overengineertes Clipboard.
 
 
 \section{Projektidee}\label{sec:projektidee}
 Spa{\ss} beiseite, tats{"a}chlich habe ich einen Anwendungsfall, indem ich so etwas brauche.
-An unserer Hochschule bekommt man im Eduroam-WLAN eine {"o}ffentliche Ip-Adresse.
+An unserer Hochschule bekommt man im Eduroam-WLAN eine {"o}ffentliche IP-Adresse.
 F{"u}r Experimente ist das als Student nat{"u}rlich ein Fest.
 Jedenfalls wollte ich mich von einem Raspberry Pi aus einem 5G Netz zu meinem Laptop verbinden.
 Dabei handelt es sich nebenbei um das Maveric-Projekt.
-Das funktioniert auch da ich ja eine {"o}ffentliche Ip bekomme.
-Nur {"a}ndert sich diese Ip gelegentlich.
+Das funktioniert auch, da ich ja eine {"o}ffentliche IP bekomme.
+Nur {"a}ndert sich diese IP gelegentlich.
 Leider kann ich keine Angaben dazu machen, wann oder wie oft das Vorkommt.
-Es w{"a}re nicht schlecht, automatisiert die neue Ip herauszubekommen, da ich nur umst{"a}ndlich Zugriff auf den Raspberry Pi habe.
-W{"a}hrend ich das hier schreibe, ist das noch nicht erprobt worden, sollte aber dank Api funktionieren.
+Es w{"a}re nicht schlecht, automatisiert die neue IP herauszubekommen, da ich nur umst{"a}ndlich Zugriff auf den Raspberry Pi habe.
+W{"a}hrend ich das hier schreibe, ist das noch nicht erprobt worden, sollte aber dank API funktionieren.
 Diese Problematik gab mir jedenfalls die Idee f{"u}r das Projekt.
 
 \section{Ziel}\label{sec:ziel}
-Ziel ist eine Anwendung über die sich IP-Adressen Teilen lassen.
-Ob mein Projekt gro{\ss}e Verwendung f{"u}r andere hat bleibt abzuwarten.
-Im Wesentlichen ging es darum mich mit Webentwicklung und im speziellen Flask zu besch{"a}ftigen.
-Etwas zu experimentieren und dabei zu lernen.
+Ziel ist eine Anwendung {"u}ber die sich IP-Adressen Teilen lassen.
+Ob mein Projekt gro{\ss}e Verwendung f{"u}r andere hat, bleibt abzuwarten.
+Im Wesentlichen ging es darum mich mit Webentwicklung und im speziellen Flask zu besch{"a}ftigen, etwas zu experimentieren und dabei zu lernen.
 Dementsprechend sind manche Designentscheidungen auch getroffen, einfach um zu experimentieren.
 Manche Dinge sind daher auch nicht ganz einheitlich implementiert.
 
 \section{Bestehende L{"o}sungen}\label{sec:bestehende-losungen}
-Es gibt bereits Webseiten, welche einem die eigene {"o}ffentliche Ip Adresse verraten.
+Es gibt bereits Webseiten, welche einem die eigene {"o}ffentliche IP Adresse verraten.
 Diese w{"a}hren z.B. whatismyipaddress.com\cite{whatismyipaddress} oder whatismyip\cite{whatismyip}.
 Sie erlauben es aber nicht, die Adresse von einem anderen Ger{"a}t zu bekommen.
 
 \section{Anforderungen}\label{sec:anforderungen}
 Auf die Details m{"o}chte ich im Kapitel zu Planung und Entwurf~\ref{ch:planung-und-entwurf} eingehen.
-Im groben sollen Ip-Adressen von einem Ger{"a}t geteilt werden k{"o}nnen um sie dann von einem andern Ger{"a}t abrufen zu k{"o}nnen.
-Als Rahmenbedingung f{"u}r das Projekt war noch gegeben das es sich um eine multiuserf{"a}hige Webanwendung mit Datenbank handeln soll.
-Die Entwicklung sollte nach einem Agilen-Vorgehensmodell erfolgen.
+Im groben sollen IP-Adressen von einem Ger{"a}t geteilt werden k{"o}nnen, um sie dann von einem andern Ger{"a}t abrufen zu k{"o}nnen.
+Als Rahmenbedingung f{"u}r das Projekt war noch gegeben, dass es sich um eine multi-user-f{"a}hige Webanwendung mit Datenbank handeln soll.
+Die Entwicklung sollte nach einem agilen Vorgehensmodell erfolgen.
 
 
