Texte auf der register seite.

--- a/documentation/src/PlanungEntwurf.tex
+++ b/documentation/src/PlanungEntwurf.tex
@@ -28,7 +28,7 @@ Ich verwende drei einfache Rollen, um Personen zu klassifizieren, die mit der An
 \begin{CheckList}{Task}
     \Task{done}{Als Visitor m{"o}chte ich meine IP-Adresse teilen, um sie auf einem andern Ger{"a}t abzurufen.}
     \Task{done}{Als Visitor m{"o}chte ich {"u}ber die Risiken des Teilens, informiert werden.}
-    \Task{open}{Als Visitor m{"o}chte ich {"u}ber das Anlegen eines Users informiert werden.} %todo Texte auf Register Seite Fehlen.
+    \Task{done}{Als Visitor m{"o}chte ich {"u}ber das Anlegen eines Users informiert werden.}
     \Task{done}{Als Visitor m{"o}chte ich einen Accout registirern, um User zu werden.}
     \Task{done}{Als Visitor m{"o}chte ich die App ohne Cookies nutzen k{"o}nnen.}
     \Task{done}{Als Admin m{"o}chte ich eine requirements.txt.}
